cmake_minimum_required()
project(bad_apple)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
find_package(Curses REQUIRED)
set(SOURCE_FILES main.cpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_OSX_ARCHITECTURES "arm64")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PRIVATE "/usr/local/include/opencv4" ${Boost_INCLUDE_DIRS} ${CURSES_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES} ${CURSES_LIBRARIES})